fix the layout and csp headers

--- a/projects/0xcafe/templates/projects/alxhttp.html
+++ b/projects/0xcafe/templates/projects/alxhttp.html
@@ -1,3 +1,12 @@
 <h1>alxhttp</h1>
-<p>A simple python base server class for aiohttp that configures a JSON logger and gives each request a unique ID that
-    can be used to tie all the log messages together.</p>
+
+<div class="flex flex-col gap-2">
+    <p>A simple python base server class for aiohttp that configures a JSON logger and gives each request a unique ID
+        that
+        can be used to tie all the log messages together.</p>
+
+    <a class="flex flex-row gap-2 border border-dotted w-fit p-1" href="https://github.com/alexmac/alxhttp">
+        <img src="/gh.svg" alt="Github Logo" class="w-6 h-6">
+        <span>Github Repo</span>
+    </a>
+</div>
