--- a/projects/0xcafe/templates/projects/aws.html
+++ b/projects/0xcafe/templates/projects/aws.html
@@ -1,3 +1,12 @@
 <h1>aws</h1>
-<p>Simple but powerful AWS setup that gives you an ECS cluster you can deploy containers to and a tailscale router you
-    can use to get inside. ECS setup is fronted by a load balancer and a cloudfront distro - used to run this site.</p>
+<div class="flex flex-col gap-2">
+    <p>Simple but powerful AWS setup that gives you an ECS cluster you can deploy containers to and a tailscale router
+        you
+        can use to get inside. ECS setup is fronted by a load balancer and a cloudfront distro - used to run this site.
+    </p>
+
+    <a class="flex flex-row gap-2 border border-dotted w-fit p-1" href="https://github.com/alexmac/aws">
+        <img src="/gh.svg" alt="Github Logo" class="w-6 h-6">
+        <span>Github Repo</span>
+    </a>
+</div>
