--- a/projects/0xcafe/tailwind.input.css
+++ b/projects/0xcafe/tailwind.input.css
@@ -21,7 +21,7 @@
     }
 
     header {
-        @apply p-1 text-lg border border-dotted;
+        @apply p-1 text-lg border border-dotted h-fit;
         @apply md:col-start-1 md:col-span-full md:row-start-1 md:row-end-2;
     }
 
@@ -34,4 +34,14 @@
         @apply p-1 border border-dotted break-words;
         @apply md:col-start-3 md:col-span-full md:row-start-2 md:row-span-full;
     }
+}
+
+#cooltransarticle {
+    @apply p-4 border-0;
+    @apply md:col-start-1 md:col-span-full md:row-start-2 md:row-span-full;
+}
+
+#leafletmap {
+    height: 240px;
+    @apply w-full;
 }
