Support NDOT cameras

--- a/projects/0xcafe/templates/cooltrans.html
+++ b/projects/0xcafe/templates/cooltrans.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <meta property="og:image" content="/api/cooltrans/thumbnail{{stream}}/playlist.m3u8" />
+    <meta property="og:image" content="/api/cooltrans/thumbnail/{{stream}}/playlist.m3u8" />
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <div id="leafletmap"></div>
         <div data-vjs-player id="vidd">
             <video id="vid" class="video-js" controls muted autoplay playsinline>
-                <source src="/api/cooltrans/proxy{{stream}}/playlist.m3u8" type="application/x-mpegURL">
+                <source src="/api/cooltrans/proxy/{{stream}}/playlist.m3u8" type="application/x-mpegURL">
             </video>
         </div>
     </article>
