fix titles + add cloudfront

--- a/projects/0xcafe/templates/cooltrans.html
+++ b/projects/0xcafe/templates/cooltrans.html
@@ -13,7 +13,7 @@
     <meta property="{{k}}" content="{{v}}" />
     {% endfor %}
 
-    <title>Cooltrans</title>
+    <title>{{title}}</title>
     <link href="/tailwind.css" rel="stylesheet">
     <link href="/leaflet/leaflet.css" rel="stylesheet">
     <link href="/video-js.css" rel="stylesheet" />
